# hp_node_stream

./: .gitignore  Cargo.toml  MARK_PRICE_SEPARATION.md  README.md  README_CLIENT_AUTH.md  build.rs  client_config.json.example  client_example.py  mark_price_client.py  market_config.py  node_client.py  requirements.txt  subscribe.proto  subscribe_pb2.py  subscribe_pb2_grpc.py  test_external_connection.py
docs/: DEPLOYMENT.md  README.md  benchmark_results.md  external_access_and_auth.md  grpc_server_architecture.md  hl_node_data_consumption_flow.md  json_parsing_analysis.md  mark_price_comparison.md  mark_price_decoupling_design.md  mark_price_research.md  oracle_price_access_summary.md  oracle_price_integration_plan.md  robust_json_parsing_update.md  test_summary.md
examples/: symbology_example.py  test_client.rs
proto/: orderbook.proto  orderbook_pb2.py  orderbook_pb2_grpc.py  subscribe_pb2.py  subscribe_pb2_grpc.py
scripts/: check_aws_access.sh
scripts/benchmarks/: benchmark_client.py  benchmark_per_market.py  quick_benchmark.py
scripts/examples/: stream_all_markets.py
scripts/monitoring/: debug_file_monitor.py  monitor_orderbook_health.sh  monitor_orders.sh  monitor_resources.py  monitor_throughput.py
scripts/tests/: create_test_order.py  create_test_orders.py  final_test.py  simple_test.py  stress_test.py  test_basic_stream.py  test_btc_stream.py  test_direct_path.py  test_final_stream.py  test_l2_final.py  test_l2_stream.py  test_live_stream.py  test_markets.py  test_optimized.py  test_order_processing.py  test_polling.py  test_simple.py  test_snapshot.py  test_stream_debug.py  test_stream_simple.py
scripts/utils/: failure_scenarios.sh  fetch_all_markets.py  find_markets.py  generate_live_orders.py  generate_market_config.py  generate_test_data.py  inject_correct_format.py  inject_live_orders.py  inject_test_orders.py  parse_binary_orders.py  run_with_realtime.sh  setup.sh  stream_from_docker.sh  stream_live_data.sh  stream_realtime_orders.py
src/: auth_interceptor.rs  config.rs  dynamic_markets.rs  fast_orderbook.rs  file_monitor.rs  grpc_server.rs  lib.rs  main.rs  main_optimized.rs  main_realtime.rs  mark_price.rs  mark_price_service.rs  mark_price_v2.rs  market_manager.rs  market_processor.rs  markets.rs  oracle_client.rs  oracle_price_feed.rs  order_parser.rs  orderbook.rs  per_market_circuit_breaker.rs  robust_order_processor.rs  stop_orders.rs  symbology.rs  tls_config.rs  types.rs
