[package]
name = "orderbook-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Data structures
dashmap = "5.5"  # Concurrent hashmap
parking_lot = "0.12"  # Faster mutex
crossbeam = "0.8"  # Lock-free data structures

# gRPC
tonic = "0.10"
prost = "0.12"
tower = "0.4"

# Monitoring
notify = "6.1"  # File system events
tracing = "0.1"
tracing-subscriber = "0.3"

# Performance
ahash = "0.8"  # Faster hasher
ryu = "1.0"  # Fast float to string
itoa = "1.0"  # Fast integer to string
simd-json = "0.13"  # SIMD JSON parsing

# Storage
rocksdb = { version = "0.21", optional = true }
lz4 = "1.24"

[build-dependencies]
tonic-build = "0.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[features]
default = ["persistence"]
persistence = ["rocksdb"]